WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205270
[GStreamer][WPE] Fix regressions related to our 'Fix GStreamer capturer mock' patch
https://bugs.webkit.org/show_bug.cgi?id=205270
Summary
[GStreamer][WPE] Fix regressions related to our 'Fix GStreamer capturer mock'...
Thibault Saunier
Reported
2019-12-16 07:25:34 PST
See patch
Attachments
Patch
(4.69 KB, patch)
2019-12-16 07:27 PST
,
Thibault Saunier
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thibault Saunier
Comment 1
2019-12-16 07:27:32 PST
Created
attachment 385763
[details]
Patch
Philippe Normand
Comment 2
2019-12-16 07:33:52 PST
Comment on
attachment 385763
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=385763&action=review
> LayoutTests/webrtc/peer-connection-audio-mute.html:34 > - return navigator.mediaDevices.getUserMedia({audio: true}).then((localStream) => { > + return navigator.mediaDevices.getUserMedia({audio: { echoCancellation : false}}).then((localStream) => {
Why this change?
Thibault Saunier
Comment 3
2019-12-16 07:59:00 PST
(In reply to Philippe Normand from
comment #2
)
> Comment on
attachment 385763
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=385763&action=review
> > > LayoutTests/webrtc/peer-connection-audio-mute.html:34 > > - return navigator.mediaDevices.getUserMedia({audio: true}).then((localStream) => { > > + return navigator.mediaDevices.getUserMedia({audio: { echoCancellation : false}}).then((localStream) => { > > Why this change?
Because the test expects no echo cancelation and apple ports mock default to echoCancellation=false but this is not correct. see
https://bugs.webkit.org/show_bug.cgi?id=205057
WebKit Commit Bot
Comment 4
2019-12-17 02:11:46 PST
Comment on
attachment 385763
[details]
Patch Clearing flags on attachment: 385763 Committed
r253617
: <
https://trac.webkit.org/changeset/253617
>
WebKit Commit Bot
Comment 5
2019-12-17 02:11:47 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-12-17 02:12:28 PST
<
rdar://problem/58001072
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug