[GStreamer][WPE] Fix regressions related to our 'Fix GStreamer capturer mock' patch https://bugs.webkit.org/show_bug.cgi?id=205270

Source/WebCore:

MockGStreamerAudioCaptureSource rightfully defaults to echoCancellation=True,
see https://bugs.webkit.org/show_bug.cgi?id=205057

Patch by Thibault Saunier <tsaunier@igalia.com> on 2019-12-17
Reviewed by Philippe Normand.

This fixes existing tests

* platform/mediastream/gstreamer/MockGStreamerAudioCaptureSource.cpp:
(WebCore::WrappedMockRealtimeAudioSource::addHum):

LayoutTests:

Skip GPUProcess related tests

Patch by Thibault Saunier <tsaunier@igalia.com> on 2019-12-17
Reviewed by Philippe Normand.

* platform/gtk/TestExpectations:
* platform/wpe/TestExpectations:
* webrtc/peer-connection-audio-mute.html:

Canonical link: https://commits.webkit.org/218524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253617 268f45cc-cd09-0410-ab3c-d52691b4dbfc